# projects-api

./: .env.local  .gitignore  Dockerfile  README.md  README_design.md  README_technical.md  build.sh  dev_start_reload.sh  docker-compose.yml  prestart.sh  pyproject.toml  start.sh  start_reload.sh  test.sh
alembic/: README.md  env.py
alembic/versions/: 39c350edef40_create_projects_model.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: projects.py
app/core/: config.py
app/crud/: __init__.py  base.py
app/db/: base.py  base_class.py  init_db.py
app/models/: project.py
app/schemas/: __init__.py  common.py  date_range.py  project.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_projects.py
app/tests/api/v1/: test_projects.py
app/tests/crud/: test_item.py  test_project.py
app/tests/utils/: item.py  project.py  utils.py
