[tool.poetry]
name = "app"
version = "0.1.0"
description = "API for managing geo projects (plots)"
authors = ["Maciej Szok <maciej.szok12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = ">=0.29.0"
fastapi = "^0.110.1"
requests = "^2.31.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
raven = "^6.10.0"
gunicorn = "^21.2.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
pytest = "^8.1.1"
httpx = "^0.27.0"
psycopg = {extras = ["binary"], version = "^3.1.13"}

# TODO implement usage of the dev tools
[tool.poetry.dev-dependencies]
mypy = ">=1.7.0"
black = ">=23.11.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
